	* frame.c (x_get_arg):
	* keyboard.c (safe_run_hooks_error):
	* lread.c (load_warn_old_style_backquotes):
	* xdisp.c (Fcurrent_bidi_paragraph_direction):
	* xfns.c (x_default_scroll_bar_color_parameter, select_visual):
	* xselect.c (x_clipboard_manager_error_1)
	(x_clipboard_manager_save_all):
	* xterm.c (x_term_init): Use build_local_string.

2014-09-15  Eli Zaretskii  <eliz@gnu.org>

	* sound.c [WINDOWSNT]: Include w32common.h and mbstring.h.
	(SOUND_WARNING) [WINDOWSNT]: Include in do..while and improve the
	error message format.  Use message_with_string to have non-ASCII
	file names properly displayed.
	(do_play_sound) [WINDOWSNT]: Use Unicode APIs to play sound files
	when w32-unicode-filenames is non-nil, but not on Windows 9X,
	where these APIs are not available even in UNICOWS.DLL.  Improve
	the format of error messages and include the file name in them
	where appropriate.
	(Fplay_sound_internal) [WINDOWSNT]: Make the MS-Windows branch
	call play-sound-functions, per documentation.

	* w32.c (w32_get_long_filename, w32_get_short_filename): Constify
	the input file name arguments.

	* w32.h (w32_get_long_filename, w32_get_short_filename): Update
	prototypes.

2014-09-15  Dmitry Antipov  <dmantipov@yandex.ru>

	If USE_LOCAL_ALLOCATORS, allocate some Lisp objects on stack.
	* lisp.h (local_cons, local_list1, local_list2, local_list3)
	[USE_LOCAL_ALLOCATORS]: New macros.
	[!USE_LOCAL_ALLOCATORS]: Fall back to regular functions.
	(build_local_string): Avoid argument name expansion clash with
	make_local_string.
	* alloc.c (toplevel)
	[USE_LOCAL_ALLOCATORS && GC_MARK_STACK != GC_MAKE_GCPROS_NOOPS]:
	Preprocessor guard to avoid impossible configuration.
	* charset.c (Ffind_charset_region, Ffind_charset_string):
	Use make_local_vector.
	* lread.c (read1, substitute_object_recurse): Use scoped_cons.
	* textprop.c (Fput_text_property, Fadd_face_text_property):
	Use scoped_list2.
	(copy_text_properties): Use local_cons and local_list3.
	* chartab.c (uniprop_table):